Text align bug fix and website icon

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
 	font-family: "Standard", sans-serif;
-	text-align: centre;
+	text-align: center;
 	background-color: #9999cc;
 	color: #000000;
 }
